# SIGK

./: .gitignore  pyproject.toml
01_modyfikacja_obrazow/: 1.ipynb  1_gan_v1.ipynb  2.ipynb  3.ipynb  4.ipynb  data_preparation.ipynb  utils.py
02_mapowanie_tonalne/: model.ipynb  resize.ipynb
03_generacja_obrazow/: 02_classifier.ipynb  cvae.ipynb  main.ipynb  results.py
03_generacja_obrazow/results/: FakeTrainOriginalTest_BloodMNIST.json  FakeTrainOriginalTest_DermaMNIST.json  MixTrainMixTest_BloodMNIST.json  MixTrainMixTest_DermaMNIST.json  OriginalTrainFakeTest_BloodMNIST.json  OriginalTrainFakeTest_DermaMNIST.json
03_generacja_obrazow/src/: classifier.py  dataset.py  experiment.py  generator.py  results.py  trainer.py  utils.py
04_rendering_neuralny/: .gitignore
04_rendering_neuralny/notebook/: diffuse_model.ipynb  small_model.ipynb  stable_diffusion_model.ipynb
04_rendering_neuralny/output123/: frame_parameters.csv
04_rendering_neuralny/resources/shaders/phong/: phong.frag
04_rendering_neuralny/src/: base_window.py  main.py  phong_window.py  scale_img.py
04_rendering_neuralny/src/utils/: config.py
05_animacja/: main.ipynb
