[project]
name = "sigk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lpips>=0.1.4",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pip>=25.0.1",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
]
