[project]
name = "sigk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brisque>=0.0.16",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.1",
    "medmnist>=3.0.2",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "opencv-python>=4.11.0.86",
    "pdfkit>=1.0.0",
    "pip>=25.0.1",
    "pyrr>=0.10.3",
    "pywavefront>=1.3.3",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
    "torchmetrics>=1.6.3",
    "wkhtmltopdf>=0.2",
]
